testdata/parse-errors/specs/concepts/stepNotInConcept.cpt
* step1

# Concept Heading
* step1
* step2